--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.charlesmilette.nokeyguardindication">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="me.charlesmilette.nokeyguardindication">
 
     <application android:label="No Keyguard Indication">
-        <meta-data
-            android:name="xposedmodule"
-            android:value="true" />
-        <meta-data
-            android:name="xposeddescription"
-            android:value="Hides the tips on the lockscreen" />
-        <meta-data
-            android:name="xposedminversion"
-            android:value="81" />
+        <meta-data android:name="xposedmodule" android:value="true" />
+        <meta-data android:name="xposeddescription" android:value="Hides the tips on the lockscreen" />
+        <meta-data android:name="xposedminversion" android:value="81" />
     </application>
 
 </manifest>
